syntax = "proto3";

package logistic;

option go_package = "./pkg/logistic/pb";


service LogisticService {
    rpc GetCouriers(Page) returns (Couriers);
    rpc GetCourierByRoute(RouteParams) returns (Courier);
}



message Pagination {
    uint64 total = 1;
    uint32 per_page = 2;
    uint32 current_page = 3;
    uint32 last_page = 4;
}


message Page {
    int64 page = 1;
}


message RouteParams {
    string origin_name = 1;
    string destination_name = 2;
} 



message Courier {
    string logistic_name = 1;
    uint64 amount = 2;
    string destination_name = 3;
    string origin_name = 4;
    string duration = 5;
}


message Couriers {
    Pagination pagination = 1;
    repeated Courier data = 2;
}




